--- a/players/code development.ipynb
+++ b/players/code development.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from games4e import *\n"
+    "from games4e import *\n",
+    "import math\n",
+    "\n"
    ]
   },
   {
@@ -46,29 +48,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_move(state_str):\n",
-    "    #convert string into dictionary\n",
-    "    state = {'A': int(state_str[1]), 'B': int(state_str[3]), 'C': int(state_str[5]), 'D': int(state_str[7])}\n",
-    "    possible_moves = ['AB', 'AC', 'AD', 'BA', 'BC', 'BD']\n",
+    "# def generate_move(state_str):\n",
+    "#     #convert string into dictionary\n",
+    "#     state = {'A': int(state_str[1]), 'B': int(state_str[3]), 'C': int(state_str[5]), 'D': int(state_str[7])}\n",
+    "#     possible_moves = ['AB', 'AC', 'AD', 'BA', 'BC', 'BD']\n",
     "\n",
-    "    #compute all legal moves\n",
-    "\n",
+    "    #compute all legal moves -= DONE\n",
+    "    \n",
     "    #iterate through all possible moves\n",
     "        #evaluate the move\n",
-    "            #if move is forced win, return move\n",
+    "            #if move is forced win,\n",
+    "            #find next state from each move\n",
+    "            #find all possible moves from next state\n",
+    "            #find all states from next state\n",
+    "            #if states found on depth x - terminate graph\n",
+    "\n",
+    "            #return move\n",
     "            #else find k-distance - minimum distance to lost state\n",
-    "            #return k-distance\n",
+    "            #return k-distance \n",
     "        #return move with highest k-distance - furthest away from losing\n",
     "    \n",
     "    #convert move into string\n",
     "\n",
     "\n",
+    "#create class for move graph \n",
+    "    #methods\n",
+    "    # create queue of states - iterate over theme\n",
+    "    # add next_states\n",
+    "    # output a dictionary of states and their related states\n",
+    "    #     \n",
+    "\n",
+    "import math\n",
+    "\n",
+    "class Chopsticks():\n",
+    "    def __init__(self):\n",
+    "        self.state = {'A': 1, 'B': 1, 'C': 1, 'D': 1, 'A_to_move': True}\n",
+    "        self.moves = ['AB', 'AC', 'AD', 'BA', 'BC', 'BD']\n",
+    "        self.opponent_moves = ['CD', 'CB', 'CA', 'DC', 'DB', 'DA']\n",
+    "        self.A_to_move = True\n",
     "    \n",
+    "    def legal_moves(self, state):\n",
+    "        l_moves = []\n",
+    "        if state['A_to_move']:\n",
+    "            for move in self.moves:\n",
+    "                tapping_hand = move[0]\n",
+    "                tapped_hand = move[1]\n",
+    "                if state[tapping_hand] == 0:\n",
+    "                    continue\n",
+    "                elif state[tapped_hand] == 0 and state[tapping_hand] >= 4 and move in ['AB', 'BA']:\n",
+    "                    l_moves.append(move)\n",
+    "                elif state[tapped_hand] == 0:\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    if move not in ['AB', 'BA']:\n",
+    "                        l_moves.append(move) #finds all legal attacks\n",
+    "        else:\n",
+    "            for move in self.opponent_moves:\n",
+    "                tapping_hand = move[0]\n",
+    "                tapped_hand = move[1]\n",
+    "                if state[tapping_hand] == 0: #checks if hand is dead\n",
+    "                    continue\n",
+    "                elif state[tapped_hand] == 0 and state[tapping_hand] >= 4 and move in ['CD', 'DC']: #checks if move is split\n",
+    "                    print('here')\n",
+    "                    l_moves.append(move)\n",
+    "                elif state[tapped_hand] == 0: # checks if move attacks dead hand\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    if move not in ['CD', 'DC']: #included so that splitting moves cannot be counted as attacking\n",
+    "                        l_moves.append(move) #finds all legal attacks\n",
+    "        return l_moves\n",
+    "\n",
+    "    def convert_state_to_dictionary(self, state_str):\n",
+    "        #ASSUMES A IS MOVING\n",
+    "        state = {'A': int(state_str[1]), 'B': int(state_str[3]), 'C': int(state_str[5]), 'D': int(state_str[7]), 'A_to_move': True}\n",
+    "        return state\n",
+    "\n",
+    "    def next_state(self, state, move):\n",
+    "        #ADD ERROR HANDLING - IF MOVE NOT IN LEGAL MOVES - IE IF A_To_move is false and move is in self.moves\n",
+    "        tapping_hand = move[0]\n",
+    "        tapped_hand = move[1]\n",
+    "        new_state = state.copy()\n",
+    "        if state[tapped_hand] == 0: #checks if move is split\n",
+    "            new_state[tapped_hand] = math.floor(state[tapping_hand]/2)\n",
+    "            new_state[tapping_hand] = math.ceil(state[tapping_hand]/2)\n",
+    "        else: #CLEAN CODE LATER\n",
+    "            if state[tapped_hand] + state[tapping_hand] > 5:\n",
+    "                new_state[tapped_hand] = 0\n",
+    "            else:\n",
+    "                new_state[tapped_hand] = state[tapped_hand] + state[tapping_hand]\n",
+    "        new_state['A_to_move'] = not state['A_to_move']\n",
+    "        return new_state\n",
     "    \n",
+    "    def evaluate_move(self, state, move):\n",
+    "        new_state = self.next_state(state, move)\n",
+    "        queue = [] #queue of dictionary states to be iterated over\n",
+    "        first_state = self.next_state(state, move)\n",
+    "        first_state_moves = self.legal_moves(first_state)\n",
+    "        print(first_state)\n",
+    "        queue.append(first_state)\n",
+    "        for iteration in range(0,20):\n",
+    "            current_state = queue.pop(0)\n",
+    "            moves = self.legal_moves(current_state)\n",
+    "            for move in moves:\n",
+    "                print(move)\n",
+    "                next_state = self.next_state(current_state, move)\n",
+    "                print(next_state)\n",
+    "                queue.append(next_state)\n",
+    "    # Keep track of how far you've gone down the tree and which branch you're on, and when to eliminate branch\n",
+    "    # return the h-value of the move - how far away from losing OR if forced win\n",
+    "    # if forced win - h will be negative infinity\n",
+    "    # FUNCTION DOESNT WORK FOR 1V1 SITUATION\n",
+    "\n",
+    "    def check_if_state_won(self, state):\n",
+    "        #CHECKS IF WON STATE\n",
+    "        if state['C'] == 0 and state['D'] == 0:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False  \n",
+    "    \n",
+    "    def check_if_state_lost(self, state):\n",
+    "        #CHECKS IF LOST STATE\n",
+    "        if state['A'] == 0 and state['B'] == 0:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    def check_if_state_forced_win(self, state):\n",
+    "        #CHECKS IF FORCED WIN\n",
+    "        \n",
+    "\n",
+    "#if move is forced win,\n",
+    "            #find next state from each move\n",
+    "            #find all possible moves from next state\n",
+    "            #find all states from next state\n",
+    "            #if states found on depth x - terminate graph\n",
     "\n",
     "\n",
     "\n",
@@ -77,10 +194,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': 3, 'B': 0, 'C': 4, 'D': 0, 'A_to_move': True}\n",
+      "AC\n",
+      "{'A': 3, 'B': 0, 'C': 0, 'D': 0, 'A_to_move': False}\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "pop from empty list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\User\\Desktop\\ASDS\\ST449 (AI)\\AI_ST449_Assignment_1\\players\\code development.ipynb Cell 4\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/ASDS/ST449%20%28AI%29/AI_ST449_Assignment_1/players/code%20development.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m game1 \u001b[39m=\u001b[39m Chopsticks()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/ASDS/ST449%20%28AI%29/AI_ST449_Assignment_1/players/code%20development.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m#print(game1.legal_moves({'A': 4, 'B': 3, 'C': 0, 'D': 5, 'A_to_move': False}))\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/ASDS/ST449%20%28AI%29/AI_ST449_Assignment_1/players/code%20development.ipynb#W3sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m#print(game1.next_state({'A': 4, 'B': 0, 'C': 1, 'D': 1, 'A_to_move': False}, 'AB'))\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/ASDS/ST449%20%28AI%29/AI_ST449_Assignment_1/players/code%20development.ipynb#W3sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(game1\u001b[39m.\u001b[39mevaluate_move({\u001b[39m'\u001b[39m\u001b[39mA\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m3\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mB\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m0\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mC\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m1\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mD\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m0\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mA_to_move\u001b[39m\u001b[39m'\u001b[39m: \u001b[39mFalse\u001b[39;00m}, \u001b[39m'\u001b[39m\u001b[39mAC\u001b[39m\u001b[39m'\u001b[39m))\n",
+      "\u001b[1;32mc:\\Users\\User\\Desktop\\ASDS\\ST449 (AI)\\AI_ST449_Assignment_1\\players\\code development.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/ASDS/ST449%20%28AI%29/AI_ST449_Assignment_1/players/code%20development.ipynb#W3sZmlsZQ%3D%3D?line=97'>98</a>\u001b[0m queue\u001b[39m.\u001b[39mappend(first_state)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/ASDS/ST449%20%28AI%29/AI_ST449_Assignment_1/players/code%20development.ipynb#W3sZmlsZQ%3D%3D?line=98'>99</a>\u001b[0m \u001b[39mfor\u001b[39;00m iteration \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m,\u001b[39m20\u001b[39m):\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/ASDS/ST449%20%28AI%29/AI_ST449_Assignment_1/players/code%20development.ipynb#W3sZmlsZQ%3D%3D?line=99'>100</a>\u001b[0m     current_state \u001b[39m=\u001b[39m queue\u001b[39m.\u001b[39mpop(\u001b[39m0\u001b[39m)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/ASDS/ST449%20%28AI%29/AI_ST449_Assignment_1/players/code%20development.ipynb#W3sZmlsZQ%3D%3D?line=100'>101</a>\u001b[0m     moves \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlegal_moves(current_state)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/User/Desktop/ASDS/ST449%20%28AI%29/AI_ST449_Assignment_1/players/code%20development.ipynb#W3sZmlsZQ%3D%3D?line=101'>102</a>\u001b[0m     \u001b[39mfor\u001b[39;00m move \u001b[39min\u001b[39;00m moves:\n",
+      "\u001b[1;31mIndexError\u001b[0m: pop from empty list"
+     ]
+    }
+   ],
+   "source": [
+    "game1 = Chopsticks()\n",
+    "\n",
+    "#print(game1.legal_moves({'A': 4, 'B': 3, 'C': 0, 'D': 5, 'A_to_move': False}))\n",
+    "#print(game1.next_state({'A': 4, 'B': 0, 'C': 1, 'D': 1, 'A_to_move': False}, 'AB'))\n",
+    "print(game1.evaluate_move({'A': 3, 'B': 0, 'C': 1, 'D': 0, 'A_to_move': False}, 'AC'))"
+   ]
   }
  ],
  "metadata": {
